fix buttons wrapping at xs

--- a/src/styles/modals/signup.scss
+++ b/src/styles/modals/signup.scss
@@ -230,6 +230,12 @@
       max-width: 360px;
     }
 
+    .btn-wrapper {
+      @include media(xs) {
+        flex-direction: column;
+      }
+    }
+
     .btn {
       margin-left: auto;
       margin-right: auto;
